<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmput301f17t12.quirks.Activities.NewEventActivity">


    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/dropdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent_selectQuirk"
        android:layout_alignParentTop="true"
        android:textSize="17sp"
        />

    <Spinner
        android:id="@+id/quirk_dropdown"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/dropdown_text"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:popupBackground="@color/backgroundlight"
        android:spinnerMode="dropdown"
        android:textSize="17sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_text"
        android:layout_below="@id/quirk_dropdown"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/comment_edittext"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/comment_text"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/backgroundlight"
        android:textSize="17sp"
        android:inputType="text" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_photo_text"
        android:layout_below="@id/comment_edittext"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/savecancel"
        android:layout_above="@id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="saveCommand"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="cancelCommand"
            android:text="@string/cancel" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/photobox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo_text"
        android:layout_marginStart="10dp">

        <Button
            android:id="@+id/browse_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pickPhoto"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/new_event_topbutton" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/browse_button"
            android:onClick="removePhoto"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/new_event_bottombutton" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="25dp"
            android:layout_toEndOf="@id/browse_button"
            android:layout_marginStart="25dp"
            android:minHeight="140dp"
            android:background="@color/backgroundlight" />


    </RelativeLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation" />

</RelativeLayout>
